--- a/scripts/bundle/tailwind/package.json
+++ b/scripts/bundle/tailwind/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bt-tailwind-build",
+  "name": "bt-tailwind",
   "version": "1.0.0",
   "description": "Tailwind CSS build for bt project",
   "scripts": {
