--- a/web/package.json
+++ b/web/package.json
@@ -8,19 +8,26 @@
     "build": "npm run build --workspace=@backthynk/theme-github",
     "build:github": "npm run build --workspace=@backthynk/theme-github",
     "build:notion": "npm run build --workspace=@backthynk/theme-notion",
-    "preview": "npm run preview --workspace=@backthynk/theme-github"
+    "preview": "npm run preview --workspace=@backthynk/theme-github",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage"
   },
   "workspaces": [
     "themes/*"
   ],
   "devDependencies": {
     "@preact/preset-vite": "^2.9.3",
+    "@testing-library/preact": "^3.2.4",
     "@types/node": "^22.10.2",
+    "@vitest/ui": "^4.0.8",
     "goober": "^2.1.16",
+    "happy-dom": "^20.0.10",
     "preact": "^10.26.1",
     "preact-iso": "^2.6.3",
     "typescript": "^5.7.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vitest": "^4.0.8"
   },
   "dependencies": {
     "@preact/signals": "^1.3.0"
